@@ -586,6 +586,11 @@ webui.feed.item.description = dc.title, dc.contributor.author, \
 #### Item Recommendation Settings #####
 # show a link to the item recommendation page from item display page
 webui.suggest.enable = false
+#
+# Enable only, if the user is logged in.
+# If not set the  default value is  false
+# webui.suggest.loggedinusers.only = true
+#
 # default name of recommender - replaced by user input if present
 webui.suggest.sender = A DSpace user
 # default name of recipient - replaced by user input if present
